# robotino_control

./: .gitignore  README.md
robotino_bringup/: CMakeLists.txt  package.xml
robotino_bringup/bash/: 1_slam.sh  2_save_map.sh  3_bringup.sh  4_set_points.sh  5_patrol.sh  6_patrol_move_base.sh
robotino_bringup/launch/: robotino_hardware.launch  robotino_navigation.launch  robotino_robot.launch  robotino_simulation.launch  robotino_visualization.launch
robotino_bringup/launch/includes/: description.launch.xml
robotino_bringup/param/: lidar_params.yaml
robotino_control/: CMakeLists.txt  package.xml
robotino_core/: CMakeLists.txt  package.xml  setup.py
robotino_core/docs/src/: class_diagram.puml  class_diagram_short.puml  connection_diagram.puml
robotino_core/experiments/: experiment1.bat  experiment2.bat  experiment_c11.bat  experiment_c21.bat  experiment_c22.bat
robotino_core/launch/: robotino_core.launch
robotino_core/nodes/: robotino_core_node
robotino_core/old/: AGV_TA_agent.py
robotino_core/param/: robotino_core_params.yaml
robotino_core/scripts/: main.py  main14.py  main15.py  main16.py  main_agv.py  main_rm_agent.py  main_ro_agent.py  main_ros.py  main_ta_agent.py  save_positions.py  test.py
robotino_core/src/: main.py  test.py
robotino_core/src/robotino_core/: Comm.py  EnvironmentalAgent.py  Graph.py  main.py
robotino_core/src/robotino_core/agv/: AGV_Action.py  AGV_Action_ROS.py  AGV_Main.py  AGV_Main_ROS.py  AGV_RM_agent.py  AGV_RM_agent_ROS.py  AGV_ROS.py  AGV_RO_agent.py  AGV_ResourceManagement.py  AGV_ResourceManagement_ROS.py  AGV_Routing.py  AGV_TA_agent.py  AGV_TA_agent_ROS.py  AGV_TaskAllocation.py  AGV_TaskAllocation_ROS.py
robotino_core/src/robotino_core/datatypes/: Bid.py  Robot.py  Task.py
robotino_core/src/robotino_core/params/: map.pgm  setup.yaml  setup15.yaml  setup16.yaml  setup17.yaml  setup18.yaml  setup2.yaml  test.yaml
robotino_core/src/robotino_core/solvers/: aco_solver.py  astar_solver.py  dmas_solver.py  feasibility_ant_solver.py  genetic_algorithm_solver.py  optimal_insertion_solver.py  resource_management_solver.py  tsp_solver.py
robotino_core/test/: add_graph_node.py  add_reservation.py  astar_test.py  astar_vs_aco_test.py  cost_test.py  delete_graph_node.py  dmas_test.py  estimate_cost_test.py  general_optimization_test.py  local_consensus_test.py  make_paper_figure.py  png_image_test.py  reservations_test.py  rm_test.py  tsp_solver_test.py  tsp_test.py  tsp_test_astar.py  tsp_test_dmas.py
robotino_core/tests/: database_test.py  move_to_goal_test.py
robotino_demo/: CMakeLists.txt  package.xml  setup.py
robotino_demo/launch/: robotino_avoid.launch  robotino_obstacle_avoidance.launch  robotino_obstacle_stop.launch  robotino_patrol.launch  robotino_patrol_avoid.launch  robotino_patrol_move_base.launch  robotino_patrol_stop.launch  robotino_set_points.launch
robotino_demo/locations/: locations_cp.yaml  locations_hall.yaml  test.yaml
robotino_demo/nodes/: robotino_avoid.py  robotino_patrol.py  robotino_patrol_avoid.py  robotino_patrol_move_base.py  robotino_patrol_stop.py  robotino_set_points.py
robotino_demo/param/: examples_params.yaml
robotino_demo/src/robotino_demo/: CollisionAvoidance.py  Controller.py
robotino_example/: CMakeLists.txt  package.xml  setup.py
robotino_example/launch/: robotino_IO_test.launch  robotino_pointop_key.launch
robotino_example/nodes/: follow_waypoints.py  follow_waypoints_CA.py  follow_waypoints_stop.py  robotino_IO_test.py  robotino_obstacle_avoidance.py  robotino_obstacle_stop.py  robotino_patrol.py  robotino_patrol_stop.py  robotino_pointop_key.py  set_waypoints.py  set_waypoints_CP_square.py
robotino_example/param/: examples_params.yaml
robotino_navigation/: CMakeLists.txt  package.xml
robotino_navigation/launch/: robotino_amcl.launch  robotino_gmapping.launch  robotino_move_base.launch  robotino_slam.launch
robotino_navigation/maps/: cp_factory.yaml  map_level0.yaml  map_level1.yaml  new_map.pgm  new_map.yaml
robotino_navigation/param/: amcl_params.yaml  camera_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  gmapping_params.yaml  local_costmap_params.yaml  move_base_params.yaml
robotino_navigation/param/costmap_params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
robotino_navigation/param/planner_params/: base_local_planner_params.yaml  dwa_local_planner_params.yaml  navfn_global_planner_params.yaml
robotino_navigation/rviz/: robotino_gmapping.rviz  robotino_navigation.rviz  robotino_navigation1.rviz
robotino_simulation/: CMakeLists.txt  package.xml
robotino_simulation/launch/: robotino_simulation.launch
robotino_status/: CMakeLists.txt  package.xml  setup.py
robotino_status/launch/: robotino_status.launch
robotino_status/nodes/: robotino_status_node
