<?xml version="1.0"?>
<package format="2">
  <name>robotino_bringup</name>
  <version>1.2.5</version>
  <description>
    Roslaunch scripts for starting the Robotino
  </description>

  <license>BSD</license>
  <author email="matthias.deryck@kuleuven.be">Matthias De Ryck</author>
  <maintainer email="matthias.deryck@kuleuven.be">Matthias De Ryck</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotino_navigation</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>sicks300</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>rto_node</exec_depend>
  <exec_depend>rto_safety</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
