<?xml version="1.0"?>
<package format="2">

  <name>robotino_bringup</name>
  <version>1.0.0</version>
  <description>This package provides some roslaunch scripts for starting the Robotino</description>

  <license>BSD</license>
  <author email="matthias.deryck@kuleuven.be">Matthias De Ryck</author>
  <maintainer email="matthias.deryck@kuleuven.be">Matthias De Ryck</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotino_navigation</exec_depend>
  <exec_depend>robotino_description</exec_depend>
  <exec_depend>sicks300</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>image_view</exec_depend>
  
</package>
