<?xml version="1.0"?>
<package format="2">

  <name>robotino_control</name>
  <version>1.0.0</version>
  <description>ROS packages for controlling the Robotino in the Ultimate Factory setup in KU Leuven Campus Bruges (meta package)</description>

  <license>BSD</license>
  <author email="matthias.deryck@kuleuven.be">Matthias De Ryck</author>
  <maintainer email="matthias.deryck@kuleuven.be">Matthias De Ryck</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotino_bringup</exec_depend>
  <exec_depend>robotino_core</exec_depend>
  <exec_depend>robotino_example</exec_depend>
  <exec_depend>robotino_navigation</exec_depend>
  <exec_depend>robotino_simulation</exec_depend>
  <exec_depend>robotino_status</exec_depend>
  <export><metapackage/></export>

</package>
