<?xml version="1.0"?>
<package format="2">

  <name>robotino_demo</name>
  <version>1.0.0</version>
  <description>This package provides some demo nodes</description>

  <license>BSD</license>
  <author email="matthias.deryck@kuleuven.be">Matthias De Ryck</author>
  <maintainer email="matthias.deryck@kuleuven.be">Matthias De Ryck</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <exec_depend>robotino_bringup</exec_depend>

</package>
